--- a/web/app/components/Button/Button.css
+++ b/web/app/components/Button/Button.css
@@ -12,17 +12,17 @@
 
 .Button {
     color: white;
-    border: 10px none;
+    border: 0 none;
     box-sizing: border-box;
     display: inline-block;
-    font-size: 14px;
+    font-size: 16px;
     cursor: pointer;
     text-decoration: none;
     outline: medium none;
     position: relative;
     z-index: 1;
-    height: 36px;
-    line-height: 36px;
+    height: 34px;
+    line-height: 32px;
     min-width: 100px;
     border-radius: 2px;
     background-color: #0c95d6;
