--- a/web/app/global.css
+++ b/web/app/global.css
@@ -62,3 +62,23 @@ input:active,
 input:focus {
     border-bottom: 2px solid rgb(0, 213, 239);
 }
+
+select {
+    width: 150px;
+    height: 34px;
+    overflow: hidden;
+    background: transparent;
+    border: 2px solid #9e9e9e;
+    font-size: 14px;
+    padding: 5px;
+    transition: all 250ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+select:hover {
+    border: 2px solid #0c95d6;
+}
+
+select:active,
+select:focus {
+    border: 2px solid #0c95d6;
+}
