--- a/web/app/components/Button/Button.css
+++ b/web/app/components/Button/Button.css
@@ -33,3 +33,12 @@
 .Button:hover {
     background-color: rgb(0, 213, 239);
 }
+
+.Button[disabled],
+.Button[disabled]:hover,
+.Button[disabled]:focus,
+.Button[disabled]:active {
+    color: lightgray;
+    background-color: gray;
+    cursor: default;
+}
