--- a/web/app/components/NavBar/NavBar.css
+++ b/web/app/components/NavBar/NavBar.css
@@ -3,8 +3,9 @@
 
     line-height: 40px;
     padding-left: 12px;
+    padding-right: 12px;
 
-    font-size: 24px;
+    font-size: 16px;
 
     color: white;
     background-color: #2b7176 ;
@@ -19,4 +20,14 @@
 .Text:hover {
     color: #FAFAFA;
     text-decoration: none;
+}
+
+.BrandText {
+    composes: Text;
+    font-size: 24px;
+}
+
+.RightText {
+    composes: Text;
+    float: right;
 }
