--- a/web/app/UserSettingsView/UserSettingsView.css
+++ b/web/app/UserSettingsView/UserSettingsView.css
@@ -7,3 +7,9 @@
 .Label {
     margin: 3px;
 }
+
+.CodeEditor {
+    composes: CodeEditor from '../components/CodeEditor/CodeEditor.css';
+    height: calc(100vh - 200px);
+    margin-top: 16px;
+}
